<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SampleActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_content_description"
                app:srcCompat="@drawable/appauth_96dp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="OIDC" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/intro_header" />

            <!--
            Displayed while the discovery document is loaded, and dynamic client registration is
            being negotiated
            -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/progress_horizontal"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign In"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/sign_in_native"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign In Native"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/get_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Get Profile"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/sign_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign out from Okta"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/refresh_token"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Refresh Token"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/clear_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Clear Data"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/revoke_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/revoke_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Revoke refresh token"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/revoke_access"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Revoke access token"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/introspect_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Instrospect refresh token"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/introspect_access"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Instrospect access token"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/introspect_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Instrospect id token"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <!-- Displayed once the authorization server configuration is resolved -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/section_margin"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/auth_options" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_hint_value"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_id_description" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>